DataDictionary.Parser/Generated/ConstraintParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from ConstraintParser.g4 by ANTLR 4.13.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.2")]
[System.CLSCompliant(false)]
public partial class ConstraintParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		DD_LABEL=1, ID_LABEL=2, NAME_LABEL=3, AUTHOR_LABEL=4, VERSION_LABEL=5, 
		DATE_OF_CREATION_LABEL=6, STRUCTURES_LABEL=7, LF_LABEL=8, SD_LABEL=9, 
		DEFINITION_LABEL=10, RESULT_LABEL=11, BASE_LABEL=12, CONSTRAINT_LABEL=13, 
		VALUES_LABEL=14, TYPE_LABEL=15, DOMAIN_LABEL=16, FORMAT_LABEL=17, NULLABILITY_LABEL=18, 
		DEFAULT_LABEL=19, NOTE_LABEL=20, STRUCTURE_TYPE=21, NULL_CONSTRAINT=22, 
		BOOLEAN=23, BASE_DOMAIN=24, L_PAREN=25, R_PAREN=26, L_CURLY=27, R_CURLY=28, 
		L_SQUARE=29, R_SQUARE=30, COMA=31, FULLSTOP=32, HASH=33, AMPERSAND=34, 
		AND=35, OR=36, NOT=37, CURRENT_DATE=38, TODAY=39, NOW=40, IN=41, LIKE=42, 
		BETWEEN=43, SUM=44, AVG=45, COUNT=46, MIN=47, MAX=48, GE=49, LE=50, NEQ=51, 
		EQ=52, GT=53, LT=54, PLUS=55, MINUS=56, ASTERISK=57, SLASH=58, DATE=59, 
		STRING=60, REAL=61, INT=62, WHITESPACE=63;
	public const int
		RULE_constraint = 0, RULE_valueConstraint = 1, RULE_expression = 2, RULE_comparableValue = 3, 
		RULE_dateValue = 4, RULE_operator = 5, RULE_inConstraint = 6, RULE_inValue = 7, 
		RULE_likeConstraint = 8, RULE_betweenConstraint = 9, RULE_betweenValue = 10, 
		RULE_arithmeticConstraint = 11, RULE_arithmeticExpression = 12, RULE_term = 13, 
		RULE_atom = 14, RULE_aggregateFunction = 15;
	public static readonly string[] ruleNames = {
		"constraint", "valueConstraint", "expression", "comparableValue", "dateValue", 
		"operator", "inConstraint", "inValue", "likeConstraint", "betweenConstraint", 
		"betweenValue", "arithmeticConstraint", "arithmeticExpression", "term", 
		"atom", "aggregateFunction"
	};

	private static readonly string[] _LiteralNames = {
		null, "'DATA DICTIONARY'", "'id:'", "'name:'", "'author:'", "'version:'", 
		"'date of creation:'", "'STRUCTURES'", "'LOGICAL FUNCTION'", "'SEMANTIC DOMAIN'", 
		"'definition:'", "'result:'", "'base:'", "'constraint:'", "'values:'", 
		"'type:'", "'domain:'", "'format:'", "'nullability:'", "'default:'", "'note:'", 
		null, null, null, null, "'('", "')'", "'{'", "'}'", "'['", "']'", "','", 
		"'.'", "'#'", "'&'", "'AND'", "'OR'", "'NOT'", "'current_date'", "'today'", 
		"'now'", "'IN'", "'LIKE'", "'BETWEEN'", "'SUM'", "'AVG'", "'COUNT'", "'MIN'", 
		"'MAX'", "'>='", "'<='", "'!='", "'='", "'>'", "'<'", "'+'", "'-'", "'*'", 
		"'/'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "DD_LABEL", "ID_LABEL", "NAME_LABEL", "AUTHOR_LABEL", "VERSION_LABEL", 
		"DATE_OF_CREATION_LABEL", "STRUCTURES_LABEL", "LF_LABEL", "SD_LABEL", 
		"DEFINITION_LABEL", "RESULT_LABEL", "BASE_LABEL", "CONSTRAINT_LABEL", 
		"VALUES_LABEL", "TYPE_LABEL", "DOMAIN_LABEL", "FORMAT_LABEL", "NULLABILITY_LABEL", 
		"DEFAULT_LABEL", "NOTE_LABEL", "STRUCTURE_TYPE", "NULL_CONSTRAINT", "BOOLEAN", 
		"BASE_DOMAIN", "L_PAREN", "R_PAREN", "L_CURLY", "R_CURLY", "L_SQUARE", 
		"R_SQUARE", "COMA", "FULLSTOP", "HASH", "AMPERSAND", "AND", "OR", "NOT", 
		"CURRENT_DATE", "TODAY", "NOW", "IN", "LIKE", "BETWEEN", "SUM", "AVG", 
		"COUNT", "MIN", "MAX", "GE", "LE", "NEQ", "EQ", "GT", "LT", "PLUS", "MINUS", 
		"ASTERISK", "SLASH", "DATE", "STRING", "REAL", "INT", "WHITESPACE"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "ConstraintParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static ConstraintParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public ConstraintParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public ConstraintParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ConstraintContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ValueConstraintContext valueConstraint() {
			return GetRuleContext<ValueConstraintContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public InConstraintContext inConstraint() {
			return GetRuleContext<InConstraintContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public LikeConstraintContext likeConstraint() {
			return GetRuleContext<LikeConstraintContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public BetweenConstraintContext betweenConstraint() {
			return GetRuleContext<BetweenConstraintContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ArithmeticConstraintContext arithmeticConstraint() {
			return GetRuleContext<ArithmeticConstraintContext>(0);
		}
		public ConstraintContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_constraint; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IConstraintParserListener typedListener = listener as IConstraintParserListener;
			if (typedListener != null) typedListener.EnterConstraint(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IConstraintParserListener typedListener = listener as IConstraintParserListener;
			if (typedListener != null) typedListener.ExitConstraint(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IConstraintParserVisitor<TResult> typedVisitor = visitor as IConstraintParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitConstraint(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ConstraintContext constraint() {
		ConstraintContext _localctx = new ConstraintContext(Context, State);
		EnterRule(_localctx, 0, RULE_constraint);
		try {
			State = 37;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,0,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 32;
				valueConstraint();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 33;
				inConstraint();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 34;
				likeConstraint();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 35;
				betweenConstraint();
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 36;
				arithmeticConstraint();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ValueConstraintContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext[] expression() {
			return GetRuleContexts<ExpressionContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext expression(int i) {
			return GetRuleContext<ExpressionContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] AND() { return GetTokens(ConstraintParser.AND); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode AND(int i) {
			return GetToken(ConstraintParser.AND, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] OR() { return GetTokens(ConstraintParser.OR); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OR(int i) {
			return GetToken(ConstraintParser.OR, i);
		}
		public ValueConstraintContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_valueConstraint; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IConstraintParserListener typedListener = listener as IConstraintParserListener;
			if (typedListener != null) typedListener.EnterValueConstraint(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IConstraintParserListener typedListener = listener as IConstraintParserListener;
			if (typedListener != null) typedListener.ExitValueConstraint(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IConstraintParserVisitor<TResult> typedVisitor = visitor as IConstraintParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitValueConstraint(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ValueConstraintContext valueConstraint() {
		ValueConstraintContext _localctx = new ValueConstraintContext(Context, State);
		EnterRule(_localctx, 2, RULE_valueConstraint);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 39;
			expression();
			State = 44;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==AND || _la==OR) {
				{
				{
				State = 40;
				_la = TokenStream.LA(1);
				if ( !(_la==AND || _la==OR) ) {
				ErrorHandler.RecoverInline(this);
				}
				else {
					ErrorHandler.ReportMatch(this);
				    Consume();
				}
				State = 41;
				expression();
				}
				}
				State = 46;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExpressionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public OperatorContext @operator() {
			return GetRuleContext<OperatorContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ComparableValueContext comparableValue() {
			return GetRuleContext<ComparableValueContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NOT() { return GetToken(ConstraintParser.NOT, 0); }
		public ExpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expression; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IConstraintParserListener typedListener = listener as IConstraintParserListener;
			if (typedListener != null) typedListener.EnterExpression(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IConstraintParserListener typedListener = listener as IConstraintParserListener;
			if (typedListener != null) typedListener.ExitExpression(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IConstraintParserVisitor<TResult> typedVisitor = visitor as IConstraintParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExpression(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExpressionContext expression() {
		ExpressionContext _localctx = new ExpressionContext(Context, State);
		EnterRule(_localctx, 4, RULE_expression);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 48;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==NOT) {
				{
				State = 47;
				Match(NOT);
				}
			}

			State = 50;
			@operator();
			State = 51;
			comparableValue();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ComparableValueContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public DateValueContext dateValue() {
			return GetRuleContext<DateValueContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode REAL() { return GetToken(ConstraintParser.REAL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INT() { return GetToken(ConstraintParser.INT, 0); }
		public ComparableValueContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_comparableValue; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IConstraintParserListener typedListener = listener as IConstraintParserListener;
			if (typedListener != null) typedListener.EnterComparableValue(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IConstraintParserListener typedListener = listener as IConstraintParserListener;
			if (typedListener != null) typedListener.ExitComparableValue(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IConstraintParserVisitor<TResult> typedVisitor = visitor as IConstraintParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitComparableValue(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ComparableValueContext comparableValue() {
		ComparableValueContext _localctx = new ComparableValueContext(Context, State);
		EnterRule(_localctx, 6, RULE_comparableValue);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 56;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case CURRENT_DATE:
			case TODAY:
			case NOW:
			case DATE:
				{
				State = 53;
				dateValue();
				}
				break;
			case REAL:
				{
				State = 54;
				Match(REAL);
				}
				break;
			case INT:
				{
				State = 55;
				Match(INT);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DateValueContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DATE() { return GetToken(ConstraintParser.DATE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CURRENT_DATE() { return GetToken(ConstraintParser.CURRENT_DATE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TODAY() { return GetToken(ConstraintParser.TODAY, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NOW() { return GetToken(ConstraintParser.NOW, 0); }
		public DateValueContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_dateValue; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IConstraintParserListener typedListener = listener as IConstraintParserListener;
			if (typedListener != null) typedListener.EnterDateValue(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IConstraintParserListener typedListener = listener as IConstraintParserListener;
			if (typedListener != null) typedListener.ExitDateValue(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IConstraintParserVisitor<TResult> typedVisitor = visitor as IConstraintParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDateValue(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DateValueContext dateValue() {
		DateValueContext _localctx = new DateValueContext(Context, State);
		EnterRule(_localctx, 8, RULE_dateValue);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 58;
			_la = TokenStream.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 576462676448772096L) != 0)) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class OperatorContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode GE() { return GetToken(ConstraintParser.GE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LE() { return GetToken(ConstraintParser.LE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NEQ() { return GetToken(ConstraintParser.NEQ, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode EQ() { return GetToken(ConstraintParser.EQ, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode GT() { return GetToken(ConstraintParser.GT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LT() { return GetToken(ConstraintParser.LT, 0); }
		public OperatorContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_operator; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IConstraintParserListener typedListener = listener as IConstraintParserListener;
			if (typedListener != null) typedListener.EnterOperator(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IConstraintParserListener typedListener = listener as IConstraintParserListener;
			if (typedListener != null) typedListener.ExitOperator(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IConstraintParserVisitor<TResult> typedVisitor = visitor as IConstraintParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOperator(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public OperatorContext @operator() {
		OperatorContext _localctx = new OperatorContext(Context, State);
		EnterRule(_localctx, 10, RULE_operator);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 60;
			_la = TokenStream.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 35465847065542656L) != 0)) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class InConstraintContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IN() { return GetToken(ConstraintParser.IN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode L_PAREN() { return GetToken(ConstraintParser.L_PAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public InValueContext[] inValue() {
			return GetRuleContexts<InValueContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public InValueContext inValue(int i) {
			return GetRuleContext<InValueContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode R_PAREN() { return GetToken(ConstraintParser.R_PAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] COMA() { return GetTokens(ConstraintParser.COMA); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMA(int i) {
			return GetToken(ConstraintParser.COMA, i);
		}
		public InConstraintContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_inConstraint; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IConstraintParserListener typedListener = listener as IConstraintParserListener;
			if (typedListener != null) typedListener.EnterInConstraint(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IConstraintParserListener typedListener = listener as IConstraintParserListener;
			if (typedListener != null) typedListener.ExitInConstraint(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IConstraintParserVisitor<TResult> typedVisitor = visitor as IConstraintParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitInConstraint(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public InConstraintContext inConstraint() {
		InConstraintContext _localctx = new InConstraintContext(Context, State);
		EnterRule(_localctx, 12, RULE_inConstraint);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 62;
			Match(IN);
			State = 63;
			Match(L_PAREN);
			State = 64;
			inValue();
			State = 67;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 65;
				Match(COMA);
				State = 66;
				inValue();
				}
				}
				State = 69;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==COMA );
			State = 71;
			Match(R_PAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class InValueContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DATE() { return GetToken(ConstraintParser.DATE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING() { return GetToken(ConstraintParser.STRING, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode REAL() { return GetToken(ConstraintParser.REAL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INT() { return GetToken(ConstraintParser.INT, 0); }
		public InValueContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_inValue; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IConstraintParserListener typedListener = listener as IConstraintParserListener;
			if (typedListener != null) typedListener.EnterInValue(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IConstraintParserListener typedListener = listener as IConstraintParserListener;
			if (typedListener != null) typedListener.ExitInValue(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IConstraintParserVisitor<TResult> typedVisitor = visitor as IConstraintParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitInValue(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public InValueContext inValue() {
		InValueContext _localctx = new InValueContext(Context, State);
		EnterRule(_localctx, 14, RULE_inValue);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 73;
			_la = TokenStream.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 8646911284551352320L) != 0)) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LikeConstraintContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LIKE() { return GetToken(ConstraintParser.LIKE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING() { return GetToken(ConstraintParser.STRING, 0); }
		public LikeConstraintContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_likeConstraint; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IConstraintParserListener typedListener = listener as IConstraintParserListener;
			if (typedListener != null) typedListener.EnterLikeConstraint(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IConstraintParserListener typedListener = listener as IConstraintParserListener;
			if (typedListener != null) typedListener.ExitLikeConstraint(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IConstraintParserVisitor<TResult> typedVisitor = visitor as IConstraintParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLikeConstraint(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LikeConstraintContext likeConstraint() {
		LikeConstraintContext _localctx = new LikeConstraintContext(Context, State);
		EnterRule(_localctx, 16, RULE_likeConstraint);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 75;
			Match(LIKE);
			State = 76;
			Match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
